# api

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
app/: db.py  logger.py  main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 0697a8162520_remove_date_record.py  8cd7b1d2eb13_add_bookmark_table.py
app/entities/: bookmark.py
app/exc/: archive.py
app/helpers/: archive_helper.py
app/routes/: archive.py  bookmarks.py
docker/from_source/: docker-compose.yml
