[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "numpy>=2.4.3",
    "obspy>=1.4.2",
    "setuptools==81.0.0",
    "sqlmodel>=0.0.37",
    "rpi-seism-common",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.uv.sources]
rpi-seism-common = { git = "https://github.com/rpi-seism/rpi-seism-common.git", branch = "main" }
